--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,18 +9,21 @@ jobs:
       - name: Build image
         run: |
           docker build -t myapp:latest .
+      - name: Sign in to Azure
+          uses: azure/login@v2
+          with:
+          creds: ${{secrets.AZURE_CREDENTIALS}}
       - name: Push to ACR
         run: |
-          az login --service-principal -u ${{ secrets.AZURE_USER }} -p ${{ secrets.AZURE_PASS }} --tenant ${{ secrets.AZURE_TENANT }}
-          az acr login -n sslablabacr
-          docker tag myapp:latest sslablabacr.azurecr.io/myapp:latest
-          docker push sslablabacr.azurecr.io/myapp:latest
+          az acr login -n sslablabacralexd
+          docker tag myapp:latest sslablabacralexd.azurecr.io/myapp:latest
+          docker push sslablabacralexd.azurecr.io/myapp:latest
       - name: Deploy to WebApp
         run: |
           az webapp config container set \
           -g ss-lab-rg \
-          -n sslab-webapp \
-          --container-image-name sslablabacr.azurecr.io/myapp:latest \
-          --container-registry-url https://sslablabacr.azurecr.io \
+          -n sslab-webappAlexD \
+          --container-image-name sslablabacralexd.azurecr.io/myapp:latest \
+          --container-registry-url https://sslablabacralexd.azurecr.io \
           --container-registry-user <USERNAME> \
           --container-registry-password <PASSWORD>
